--- a/LibEventTest/LibTest.vcxproj.filters
+++ b/LibEventTest/LibTest.vcxproj.filters
@@ -1,14 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="main.cpp" />
     <ClCompile Include="CPipeReactor.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="CPipe.cpp" />
+    <ClCompile Include="CEventCallback.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CPipeReactor.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="CPipe.h" />
+    <ClInclude Include="IPipeEventHandler.h" />
+    <ClInclude Include="INetEventHandler.h" />
+    <ClInclude Include="CEventCallback.h" />
   </ItemGroup>
 </Project>
